# hackathon-deepfake-agents

./: README.md  ReviewProcess.py  Roles.py  agents.py  app.py  fakeyou.py  pyproject.toml
