[tool.poetry]
name = "hackathon-deepfake-agents"
version = "0.1.0"
description = ""
authors = ["daniel.reznicek <daniel.reznicek@vacasa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
openai = "^1.30.1"
langchain-openai = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
